--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 cryptography==43.0.1
 defusedxml==0.8.0rc2
 Django==5.0.7
+django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
 django-filter==24.3
 django-templated-mail==1.1.1
